--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "REST API for IDX Stock Market Data",
   "main": "RestAPI.js",
   "scripts": {
-    "start": "node RestAPI.js",
-    "dev": "nodemon RestAPI.js"
+    "start": "node api/RestAPI.js",
+    "dev": "nodemon api/RestAPI.js"
   },
   "dependencies": {
     "axios": "^1.12.2",
